[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/fonts/8ope/8bitoperator_jve.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/sprites/battle/ui/TP_MAX.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/battle/ui/TP_BAR_BOTTOM.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/battle/ui/TP_BAR_WHITE.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/battle/ui/TP_NAME.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/battle/ui/TP_PERCENT.png" type="Texture" id=6]
[ext_resource path="res://src/scenes/battle/player/BT_P_TENSION.gd" type="Script" id=7]
[ext_resource path="res://assets/sprites/battle/ui/TP_BAR_ORANGE.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=18]
size = 32
extra_spacing_space = 8
font_data = ExtResource( 1 )

[node name="TensionBar" type="TextureRect"]
margin_right = 25.0
margin_bottom = 196.0
texture = ExtResource( 3 )
script = ExtResource( 7 )

[node name="White" type="TextureProgress" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -9.5
margin_top = -95.0
margin_right = 9.5
margin_bottom = 94.0
max_value = 250.0
value = 165.0
texture_progress = ExtResource( 4 )
fill_mode = 3

[node name="Red" type="TextureProgress" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -9.5
margin_top = -93.0
margin_right = 9.5
margin_bottom = 96.0
max_value = 250.0
value = 165.0
texture_progress = ExtResource( 8 )
fill_mode = 3
tint_progress = Color( 1, 0, 0, 1 )

[node name="Orange" type="TextureProgress" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -9.5
margin_top = -93.0
margin_right = 9.5
margin_bottom = 96.0
max_value = 250.0
value = 125.0
texture_progress = ExtResource( 8 )
fill_mode = 3
tint_progress = Color( 1, 0.627451, 0.25098, 1 )

[node name="TPTexture" type="TextureRect" parent="."]
margin_left = -30.0
margin_top = 35.0
margin_right = -8.0
margin_bottom = 71.0
texture = ExtResource( 5 )

[node name="NumberLabel" type="Label" parent="."]
margin_left = -30.0
margin_top = 70.0
margin_right = 9.0
margin_bottom = 102.0
custom_fonts/font = SubResource( 18 )
text = "99"

[node name="PercentTexture" type="TextureRect" parent="."]
margin_left = -25.0
margin_top = 103.0
margin_right = -11.0
margin_bottom = 121.0
texture = ExtResource( 6 )

[node name="MaxTexture" type="TextureRect" parent="."]
margin_left = -28.0
margin_top = 78.0
margin_right = -8.0
margin_bottom = 136.0
texture = ExtResource( 2 )

[node name="Tween" type="Tween" parent="."]
